--- a/index.html
+++ b/index.html
@@ -455,19 +455,19 @@
                 <div class="stakeholder-card">
                     <h3>🎓 Student's Perspective</h3>
                     <ul>
-                        <li>AI helps with grammar, ideas, and learning</li>
-                        <li>Some use AI for guidance, not to copy</li>
-                        <li>Need for responsible and transparent use</li>
+                        <li>AI helps with grammar, ideas, and understanding</li>
+                        <li>Many use AI for guidance rather than direct copying</li>
+                        <li>Emphasize responsible and transparent use of AI</li>
                     </ul>
                 </div>
                 
                 <div class="stakeholder-card">
                     <h3>👨‍🏫 Lecturer's Perspective</h3>
                     <ul>
-                        <li>Concern about originality and critical thinking</li>
+                        <li>Concern about originality and loss of critical thinking</li>
                         <li>Unfair to students who work independently</li>
-                        <li>Difficult to assess real understanding</li>
-                        <li>Should teach ethical AI use instead of banning</li>
+                        <li>Hard to assess true learning outcomes</li>
+                        <li>Suggest teaching ethical and guided AI use instead of banning it</li>
                     </ul>
                 </div>
                 
@@ -475,8 +475,8 @@
                     <h3>🏛️ Administrator's Perspective</h3>
                     <ul>
                         <li>Must protect academic reputation</li>
-                        <li>Total ban not practical; AI is part of modern learning</li>
-                        <li>Create clear policies on when and how to use AI</li>
+                        <li>Recognize that AI is part of modern education; total bans are unrealistic</li>
+                        <li>Need clear policies on acceptable AI use</li>
                         <li>Educate students and staff about responsible AI use</li>
                     </ul>
                 </div>
@@ -486,10 +486,10 @@
         <div class="section">
             <h2><span class="icon">⚠️</span> Different Responses</h2>
             <div class="ethical-issues">
-                <div class="issue-tag">If Ignored: Loss of Skills</div>
+                <div class="issue-tag">Loss of Skills</div>
                 <div class="issue-tag">Unfair Advantage</div>
                 <div class="issue-tag">Loss of Honesty</div>
-                <div class="issue-tag">If Banned: Miss Innovation</div>
+                <div class="issue-tag">Miss Innovation</div>
                 <div class="issue-tag">Limits Technology Use</div>
             </div>
         </div>
