--- a/index.html
+++ b/index.html
@@ -656,13 +656,13 @@
             <div class="modal-body">
                 <h4>📜 Key IEEE Principles:</h4>
                 
-                <p><strong>1. To uphold the highest standards of integrity, responsible behavior, and ethical conduct in professional activities</strong></p>
+                <p><strong>Principle 1: To uphold the highest standards of integrity, responsible behavior, and ethical conduct in professional activities</strong></p>
                 <ul>
                     <li>Engineers must maintain professional standards in all work</li>
                     <li>Integrity is non-negotiable in technical professions</li>
                 </ul>
                 
-                <p><strong>7. To seek, accept, and offer honest criticism of technical work, to acknowledge and correct errors</strong></p>
+                <p><strong>Principle 7 : To seek, accept, and offer honest criticism of technical work, to acknowledge and correct errors</strong></p>
                 <ul>
                     <li>Peers must be able to honestly critique your work</li>
                     <li>If AI did the work, can peers evaluate YOUR understanding?</li>
@@ -739,3 +739,4 @@
     </script>
 </body>
 </html>
+
